<resources>
    <string name="app_name_short">CV</string>
    <string name="app_name_long">Curriculum Vitae</string>
    <string name="progress_title">Loading…</string>
    <string name="contact_details_title">Contact Details</string>
    <string name="contact_details_phone_label">Phone:</string>
    <string name="contact_details_email_label">Email:</string>
    <string name="summary_title">Summary</string>
    <string name="community_title">Community</string>
    <string name="education_title">Education</string>
    <string name="tab_summary">Summary</string>
    <string name="tab_experience">Experience</string>
    <string name="link_image_content_description">Link Image</string>
</resources>