<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/profile_container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.ui.MainActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/measurement_medium"
            android:paddingEnd="@dimen/measurement_medium"
            android:paddingBottom="@dimen/measurement_medium">

        <TextView
                android:id="@+id/header_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_large"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/measurement_small"
                android:layout_marginTop="@dimen/measurement_small"
                tools:text="Jamie Cruwys"/>

        <TextView
                android:id="@+id/header_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_medium"
                android:layout_marginStart="@dimen/measurement_small"
                android:layout_marginTop="@dimen/measurement_small"
                tools:text="Android Developer"/>

        <androidx.cardview.widget.CardView
                android:id="@+id/contact_info_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/measurement_medium">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/measurement_small">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_medium"
                        android:text="@string/contact_details_title"/>

                <LinearLayout
                        android:id="@+id/contact_info_phone_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/measurement_small"
                        android:orientation="horizontal">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_small"
                            android:text="@string/contact_details_phone_label"/>

                    <TextView
                            android:id="@+id/contact_info_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_small"
                            android:layout_marginStart="@dimen/measurement_small"
                            android:autoLink="phone"
                            tools:text="07537489264"/>

                </LinearLayout>

                <LinearLayout
                        android:id="@+id/contact_info_email_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/measurement_small"
                        android:orientation="horizontal">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_small"
                            android:text="@string/contact_details_email_label"/>

                    <TextView
                            android:id="@+id/contact_info_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/measurement_small"
                            android:textSize="@dimen/text_small"
                            android:autoLink="email"
                            tools:text="07537489264"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:id="@+id/summary_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/measurement_medium">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/measurement_small">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_medium"
                        android:text="@string/summary_title"/>

                <TextView
                        android:id="@+id/summary_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/measurement_small"
                        tools:text="Android developer with over 5 years experience contributing to greenfield and legacy applications in many domains: ecommerce, medical, government, parking and electronic point of sale."/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:id="@+id/community_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/measurement_medium"
                android:layout_marginBottom="@dimen/measurement_medium">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/measurement_small">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_medium"
                        android:text="@string/community_title"/>

                <TextView
                        android:id="@+id/community_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/measurement_small"
                        tools:text="Since January 2015, I have been organising and speaking at a monthly meetup in Bournemouth called ​Mobile Dorset"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>