<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.MainActivity">

    <LinearLayout
            android:id="@+id/progress_container"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_height="wrap_content">

        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                style="@style/Widget.AppCompat.ProgressBar"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginTop="8dp"
                android:text="@string/progress_title"/>

    </LinearLayout>

    <ScrollView
            android:id="@+id/profile_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp">

            <TextView
                    android:id="@+id/header_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    tools:text="Jamie Cruwys"/>

            <TextView
                    android:id="@+id/header_position"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    tools:text="Android Developer"/>

            <androidx.cardview.widget.CardView
                    android:id="@+id/contact_info_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="24sp"
                            android:text="@string/contact_details_title"/>

                    <LinearLayout
                            android:id="@+id/contact_info_phone_container"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:orientation="horizontal">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"
                                android:text="@string/contact_details_phone_label"/>

                        <TextView
                                android:id="@+id/contact_info_phone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"
                                android:layout_marginStart="8dp"
                                android:autoLink="phone"
                                tools:text="07537489264"/>

                    </LinearLayout>

                    <LinearLayout
                            android:id="@+id/contact_info_email_container"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:orientation="horizontal">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"
                                android:text="@string/contact_details_email_label"/>

                        <TextView
                                android:id="@+id/contact_info_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:textSize="18sp"
                                android:autoLink="email"
                                tools:text="07537489264"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:id="@+id/summary_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="24sp"
                            android:text="@string/summary_title"/>

                    <TextView
                            android:id="@+id/summary_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            tools:text="Android developer with over 5 years experience contributing to greenfield and legacy applications in many domains: ecommerce, medical, government, parking and electronic point of sale."/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:id="@+id/community_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="24sp"
                            android:text="@string/community_title"/>

                    <TextView
                            android:id="@+id/community_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            tools:text="Since January 2015, I have been organising and speaking at a monthly meetup in Bournemouth called ​Mobile Dorset"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                    android:id="@+id/personal_projects_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:padding="8dp"
                        android:text="@string/personal_projects_title"/>

                <LinearLayout
                        android:id="@+id/personal_projects_item_container"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>